// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resume Resume Certifications renders 1`] = `
Array [
  <h2>
    Certifications
  </h2>,
  <ul>
    <li>
      <span
        className="dt-start"
      >
        12/2014
         - 
      </span>
      <span
        className="p-name"
      >
        Certified Scrum Professional (CSP) #393406
        , 
      </span>
      <span
        className="p-location"
      >
        Scrum Alliance, Indianapolis IN
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        05/2011
         - 
      </span>
      <span
        className="p-name"
      >
        Certified Scrum Developer (CSD) #33409137
        , 
      </span>
      <span
        className="p-location"
      >
        Scrum Alliance, Indianapolis IN
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        05/2011
         - 
      </span>
      <span
        className="p-name"
      >
        Certified Scrum Master (CSM) #143482
        , 
      </span>
      <span
        className="p-location"
      >
        Scrum Alliance, Indianapolis IN
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        09/2005
         - 
      </span>
      <span
        className="p-name"
      >
        Project Management Professional (PMP) #302172
        , 
      </span>
      <span
        className="p-location"
      >
        Project Management Institute, Newton Square PA
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        02/2000
         - 
      </span>
      <span
        className="p-name"
      >
        CLP Domino R5 Principal Application Developer (PCLP)
        , 
      </span>
      <span
        className="p-location"
      >
        Lotus Development, Cambridge MA
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        02/2000
         - 
      </span>
      <span
        className="p-name"
      >
        Notes R5 Application Developer, Lotus Development (CLP)
        , 
      </span>
      <span
        className="p-location"
      >
        Lotus Development, Cambridge MA
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        01/2000
         - 
      </span>
      <span
        className="p-name"
      >
        CLP Notes Principal Application Developer R4 (PCLP)
        , 
      </span>
      <span
        className="p-location"
      >
        Lotus Development, Cambridge MA
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        12/1999
         - 
      </span>
      <span
        className="p-name"
      >
        Notes Application Developer R4 (CLP)
        , 
      </span>
      <span
        className="p-location"
      >
        Lotus Development, Cambridge MA
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        12/1999
         - 
      </span>
      <span
        className="p-name"
      >
        Notes R4 System Administration 1 (SA1)
        , 
      </span>
      <span
        className="p-location"
      >
        Lotus Development, Cambridge MA
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        12/1999
         - 
      </span>
      <span
        className="p-name"
      >
        Notes R4 Application Development 1 (AD1)
        , 
      </span>
      <span
        className="p-location"
      >
        Lotus Development, Cambridge MA
      </span>
    </li>
  </ul>,
]
`;

exports[`Resume Resume Contact renders 1`] = `
Array [
  <h2>
    Contact Information
  </h2>,
  <ul>
    <li>
      <span
        className="p-email"
      >
        brian.whaley@gmail.com
      </span>
    </li>
    <li>
      <span
        className="p-street-address"
      >
        20 Homewood Drive
        , 
      </span>
      <span
        className="p-locality"
      >
        Morristown
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
      <span
        className="p-postal-code"
      >
        07960
      </span>
    </li>
    <li>
      <span
        className="p-tel"
      >
        (973) 710-8008
      </span>
    </li>
    <li>
      <span
        className="p-url"
      >
        <a
          href="https://linkedin.com/in/brianwhaley"
        >
          https://linkedin.com/in/brianwhaley
        </a>
      </span>
    </li>
  </ul>,
]
`;

exports[`Resume Resume Education renders 1`] = `
Array [
  <h2>
    Education
  </h2>,
  <ul>
    <li>
      <span
        className="dt-end"
      >
        05/2002
         - 
      </span>
      <span
        className="p-name"
      >
        Masters of Science - Information Systems (MSIS)
        , 
      </span>
      <span
        className="p-org"
      >
        Wesley J Howe School of Management, Stevens Institute of Technology
        , 
      </span>
      <span
        className="p-locality"
      >
        Hoboken
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-end"
      >
        05/1996
         - 
      </span>
      <span
        className="p-name"
      >
        Bachelor of Arts (BA) - Double Major: Visual Art and Art History
        , 
      </span>
      <span
        className="p-org"
      >
        Rutgers The State University of New Jersey
        , 
      </span>
      <span
        className="p-locality"
      >
        New Brunswick
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-end"
      >
        06/1991
         - 
      </span>
      <span
        className="p-name"
      >
        HS Diploma
        , 
      </span>
      <span
        className="p-org"
      >
        Rutgers Preparatory School
        , 
      </span>
      <span
        className="p-locality"
      >
        Somerset
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
  </ul>,
]
`;

exports[`Resume Resume Name renders 1`] = `
<h1
  className="p-name"
>
  Brian T. Whaley
</h1>
`;

exports[`Resume Resume Qualifications renders 1`] = `
Array [
  <h2>
    Professional Qualifications
  </h2>,
  <h3>
    Digital Marketing
  </h3>,
  <ul>
    <li
      className="p-qualification"
    >
      Designed, architected and implemented an integrated Digital Marketing Technology strategy across web, mobile, blog, email, and social media channels.  Achieved an average of $2M in software, hardware, and licensing costs.
    </li>
    <li
      className="p-qualification"
    >
      Designed, built, and launched new Digital products from concept to deployment.  Monitored user activity using ROI metrics, KPI results, analytics tools, and implemented improvements based on results.
    </li>
    <li
      className="p-qualification"
    >
      Managed full software product lifecycle for the Content Management, Marketing Automation, Content Delivery Network, and Software Development solutions.  This includes RFP, evaluation, pilot, architecture, build, deploy, migration, sunset, and retirement of COTS and custom solutions.  Consolidated disparate products onto new platforms, generating between $1M and $2M of savings annually.
    </li>
    <li
      className="p-qualification"
    >
      Established company’s first Mobile Development department.  Developed and maintained mobile applications on iOS, Android, Blackberry, Windows Phone, Nokia, and HTML5, reaching millions of mobile phone users daily.
    </li>
    <li
      className="p-qualification"
    >
      Researched and implemented Panda 4.0 SEO recovery efforts, which improved monthly visits from -60% to +20%.
    </li>
  </ul>,
  <h3>
    User Interface / User Experience
  </h3>,
  <ul>
    <li
      className="p-qualification"
    >
      Transformed the technology platform for web site user interface, using responsive and fluid design, atomic components, mobile first principles, and cross training
    </li>
    <li
      className="p-qualification"
    >
      Established Web Center of Excellence.  Rolled out a new corporate standard UI, including responsive web design, reusable style sheets, standard libraries, usability standards, and a style guide.  Established Advisory Board, review and approval process, and continuous improvement programs globally.
    </li>
    <li
      className="p-qualification"
    >
      Standardized the quality, development, and delivery of creative assets from 15 different advertising agencies during the project intake process of my development team.  Increased quality and decreased project time by 20%.
    </li>
  </ul>,
  <h3>
    Project Management & SDLC
  </h3>,
  <ul>
    <li
      className="p-qualification"
    >
      Managed Agile Transformation rollout across the department, developed a training program, scaled across all teams.  Acted as Agile coach for new scrum masters and their teams.
    </li>
    <li
      className="p-qualification"
    >
      Evaluated and improved the existing Scrum implementation for the development teams.  Decreased sprint length by 50%, decreased defects by 25%, and increased team participation, ownership, and communication.
    </li>
    <li
      className="p-qualification"
    >
      Revamped the department project intake stream.  Defined a single process for work intake, appropriate resource utilization, project tracking, unified roadmap, alignment with business strategy, and established ROI measurements.
    </li>
    <li
      className="p-qualification"
    >
      Rolled out department level Continuous Improvement initiative.  Improved documentation, centralized all team artifacts, and increased knowledge sharing with security, infrastructure and networking teams globally.  Decreased the length and frequency of support calls by 15%.
    </li>
    <li
      className="p-qualification"
    >
      Implemented test automation, TDD, automated build and deploy, and continuous integration across the team
    </li>
  </ul>,
  <h3>
    Leadership & People Management
  </h3>,
  <ul>
    <li
      className="p-qualification"
    >
      Developed annual and five-year strategies, focusing on people, process, technology, operations, and major projects
    </li>
    <li
      className="p-qualification"
    >
      Assembled and trained new software development and operations teams from the ground up.  Teams comprised of developers, database administrators, quality assurance testers, graphic designers, business analysts, analytics analysts, project managers, and team leads.  Followed on-shore, off-shore, co-located, and outsourced models.
    </li>
    <li
      className="p-qualification"
    >
      Implemented a blended onshore and offshore model to manage costs and provide around-the-clock and follow-the-sun development and operations schedules.  Created a savings of up to 25% annually.
    </li>
    <li
      className="p-qualification"
    >
      Improved the hiring and on-boarding process, focusing on flexibility, scalability, and quality.  Turned new hires into productive developers 33% quicker.  Focused on employee engagement through stretch assignments and ComScore surveys.  Achieved average retention rates above 95%.
    </li>
  </ul>,
]
`;

exports[`Resume Resume Skills renders 1`] = `
Array [
  <h2>
    Skills
  </h2>,
  <div
    className="p-skills"
  >
    <h3
      className="p-skill-category"
    >
      Front End
       : 
    </h3>
    <span
      className="p-skill"
    >
      HTML5, CSS3, media queries, grid system, LESS, SASS, JavaScript, jQuery, Bootstrap, React, Angular, TypeScript, Node
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Back End
       : 
    </h3>
    <span
      className="p-skill"
    >
      Visual Studio C# .Net, VB .Net, ASP .Net, MVC, PHP, Java, PERL, REST, SOAP
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Servers
       : 
    </h3>
    <span
      className="p-skill"
    >
      IIS, Linux, JBoss, Apache, AWS Cloud, Azure Cloud
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      DB
       : 
    </h3>
    <span
      className="p-skill"
    >
      Oracle, SQL Server, MySQL, MongoDB, PostGreSQL, MySQL
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Search
       : 
    </h3>
    <span
      className="p-skill"
    >
      FAST, Autonomy, Lucene, Elastic
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Continuous Integration
       : 
    </h3>
    <span
      className="p-skill"
    >
      CruiseControl, Jenkins, nCover, jMeter, Jira, Rally
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Testing
       : 
    </h3>
    <span
      className="p-skill"
    >
      Selenium, nUnit / jUnit, WatiN / WatiJ, LoadRunner, Silk Performer, HP Quality Center (HPQC), Fiddler, Firebug
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Source Code
       : 
    </h3>
    <span
      className="p-skill"
    >
      SVN, VSS, TFS
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      CMS
       : 
    </h3>
    <span
      className="p-skill"
    >
      Drupal, WordPress, Adobe Experience Manager (AEM), SharePoint, SDL Tridion, Dot Net Nuke
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      CDN
       : 
    </h3>
    <span
      className="p-skill"
    >
      Akamai, Limelight, CloudFlare, AWS CloudFront, Azure CDN
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Marketing
       : 
    </h3>
    <span
      className="p-skill"
    >
      Marketo, Salesforce Integration, Kaltura
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Monitoring
       : 
    </h3>
    <span
      className="p-skill"
    >
      Gomez, Ovis, Keynote, Monitis
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Analytics
       : 
    </h3>
    <span
      className="p-skill"
    >
      Omniture, Adobe Analytics, Google Analytics, WebTrends, Adobe Test & Target
      <br />
    </span>
    <h3
      className="p-skill-category"
    >
      Design
       : 
    </h3>
    <span
      className="p-skill"
    >
      Adobe Photoshop, Illustrator, Flash, InDesign, Sketch
      <br />
    </span>
  </div>,
]
`;

exports[`Resume Resume Summary renders 1`] = `
Array [
  <h2>
    Professional Summary
  </h2>,
  <ul
    className="p-summary"
  >
    <li>
      Information Technology leader accomplished in building and managing global high-performance teams, launching and managing digital products, and developing and executing unified product and technology strategies.  Managed:
    </li>
    <li>
      Diverse range of technologies, in the media, finance, pharmaceutical, and telecommunications industries
    </li>
    <li>
      Highly available e-commerce portals, web sites, web applications, and mobile applications
    </li>
    <li>
      Project lifecycle, Agile Methodologies (including Scrum and Kanban), benchmarking, best practices implementation, and continuous process improvement
    </li>
    <li>
      Sizable departments up to 50 staff, budgets to $10 million, using onshore staff, offshore partners, and hybrid teams
    </li>
  </ul>,
]
`;

exports[`Resume Resume Volunteer renders 1`] = `
Array [
  <h2>
    Volunteer Work
  </h2>,
  <ul>
    <li>
      <span
        className="dt-start"
      >
        02/2017
         - 
      </span>
      <span
        className="dt-end"
      >
        Present
         : 
      </span>
      <span
        className="p-job-title"
      >
        DesignThinking@Rutgers Advisory Board Member
        , 
      </span>
      <span
        className="p-org"
      >
        Rutgers University
        , 
      </span>
      <span
        className="p-locality"
      >
        Piscataway
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        02/2017
         - 
      </span>
      <span
        className="dt-end"
      >
        12/2017
         : 
      </span>
      <span
        className="p-job-title"
      >
        Web Developer
        , 
      </span>
      <span
        className="p-org"
      >
        Bunnies United Network (BUN)
        , 
      </span>
      <span
        className="p-locality"
      >
        Naperville 
        , 
      </span>
      <span
        className="p-region"
      >
        IL
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        01/1994
         - 
      </span>
      <span
        className="dt-end"
      >
        12/1994
         : 
      </span>
      <span
        className="p-job-title"
      >
        Intern / Photography Assistant
        , 
      </span>
      <span
        className="p-org"
      >
        Aerographics, Inc. 
        , 
      </span>
      <span
        className="p-locality"
      >
        New Brunswick
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
  </ul>,
]
`;

exports[`Resume Resume Work History renders 1`] = `
Array [
  <h2>
    Work History
  </h2>,
  <ul>
    <li>
      <span
        className="dt-start"
      >
        09/2018
         - 
      </span>
      <span
        className="dt-end"
      >
        Present
         : 
      </span>
      <span
        className="p-job-title"
      >
        Engineering Director
        , 
      </span>
      <span
        className="p-org"
      >
        American Express
        , 
      </span>
      <span
        className="p-locality"
      >
        New York
        , 
      </span>
      <span
        className="p-region"
      >
        NY
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        02/2018
         - 
      </span>
      <span
        className="dt-end"
      >
        03/2018
         : 
      </span>
      <span
        className="p-job-title"
      >
        Consultant, Digital Marketing Operations @ Valeant Pharmaceuticals
        , 
      </span>
      <span
        className="p-org"
      >
        S-COM
        , 
      </span>
      <span
        className="p-locality"
      >
        Pembroke Pines
        , 
      </span>
      <span
        className="p-region"
      >
        FL
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        10/2017
         - 
      </span>
      <span
        className="dt-end"
      >
        12/2017
         : 
      </span>
      <span
        className="p-job-title"
      >
        Senior Director Digital Development
        , 
      </span>
      <span
        className="p-org"
      >
        Northwell Health
        , 
      </span>
      <span
        className="p-locality"
      >
        New Hyde Park 
        , 
      </span>
      <span
        className="p-region"
      >
        NY
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        09/2014
         - 
      </span>
      <span
        className="dt-end"
      >
        09/2017
         : 
      </span>
      <span
        className="p-job-title"
      >
        Director Digital Development
        , 
      </span>
      <span
        className="p-org"
      >
        PR Newswire
        , 
      </span>
      <span
        className="p-locality"
      >
        Jersey City
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        08/2012
         - 
      </span>
      <span
        className="dt-end"
      >
        09/2014
         : 
      </span>
      <span
        className="p-job-title"
      >
        Senior Director Application Development
        , 
      </span>
      <span
        className="p-org"
      >
        Automatic Data Processing (ADP)
        , 
      </span>
      <span
        className="p-locality"
      >
        Florham Park
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        03/2010
         - 
      </span>
      <span
        className="dt-end"
      >
        08/2012
         : 
      </span>
      <span
        className="p-job-title"
      >
        Director Digital Platforms
        , 
      </span>
      <span
        className="p-org"
      >
        The Associated Press (AP)
        , 
      </span>
      <span
        className="p-locality"
      >
        Cranbury
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        10/2008
         - 
      </span>
      <span
        className="dt-end"
      >
        03/2010
         : 
      </span>
      <span
        className="p-job-title"
      >
        Manager Internet Marketing
        , 
      </span>
      <span
        className="p-org"
      >
        Bristol Myers Squibb
        , 
      </span>
      <span
        className="p-locality"
      >
        Princeton
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        09/2005
         - 
      </span>
      <span
        className="dt-end"
      >
        10/2008
         : 
      </span>
      <span
        className="p-job-title"
      >
        Manager Enterprise Web Development
        , 
      </span>
      <span
        className="p-org"
      >
        Bristol Myers Squibb
        , 
      </span>
      <span
        className="p-locality"
      >
        Princeton
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        06/2001
         - 
      </span>
      <span
        className="dt-end"
      >
        09/2005
         : 
      </span>
      <span
        className="p-job-title"
      >
        Senior Advisor
        , 
      </span>
      <span
        className="p-org"
      >
        Bristol Myers Squibb
        , 
      </span>
      <span
        className="p-locality"
      >
        Princeton
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        04/2000
         - 
      </span>
      <span
        className="dt-end"
      >
        06/2001
         : 
      </span>
      <span
        className="p-job-title"
      >
        Consultant @ Bristol Myers Squibb
        , 
      </span>
      <span
        className="p-org"
      >
        VersaTech Consulting
        , 
      </span>
      <span
        className="p-locality"
      >
        Woodbridge
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        09/1999
         - 
      </span>
      <span
        className="dt-end"
      >
        04/2000
         : 
      </span>
      <span
        className="p-job-title"
      >
        Senior Developer
        , 
      </span>
      <span
        className="p-org"
      >
        Telcordia Technologies (Formerly Bellcore)
        , 
      </span>
      <span
        className="p-locality"
      >
        Piscataway
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        04/1999
         - 
      </span>
      <span
        className="dt-end"
      >
        09/2000
         : 
      </span>
      <span
        className="p-job-title"
      >
        Consultant, Senior Developer @ Telcordia Technologies (Formerly Bellcore)
        , 
      </span>
      <span
        className="p-org"
      >
        Technisource (now Randstad)
        , 
      </span>
      <span
        className="p-locality"
      >
        Fort Lauderdale
        , 
      </span>
      <span
        className="p-region"
      >
        FL
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        10/1998
         - 
      </span>
      <span
        className="dt-end"
      >
        04/1999
         : 
      </span>
      <span
        className="p-job-title"
      >
        Consultant, Web Designer / Developer @ Telcordia Technologies (Formerly Bellcore)
        , 
      </span>
      <span
        className="p-org"
      >
        Technisource (now Randstad)
        , 
      </span>
      <span
        className="p-locality"
      >
        Fort Lauderdale
        , 
      </span>
      <span
        className="p-region"
      >
        FL
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        11/1997
         - 
      </span>
      <span
        className="dt-end"
      >
        10/1998
         : 
      </span>
      <span
        className="p-job-title"
      >
        Consultant, Web Designer / Developer @ Bristol Myers Squibb
        , 
      </span>
      <span
        className="p-org"
      >
        Tiffany Computer Systems
        , 
      </span>
      <span
        className="p-locality"
      >
        Fairfield
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        07/1996
         - 
      </span>
      <span
        className="dt-end"
      >
        11/1997
         : 
      </span>
      <span
        className="p-job-title"
      >
        Webmaster / Graphic Designer
        , 
      </span>
      <span
        className="p-org"
      >
        New World Computers Direct (NWCD)
        , 
      </span>
      <span
        className="p-locality"
      >
        Edison
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        08/1995
         - 
      </span>
      <span
        className="dt-end"
      >
        11/1996
         : 
      </span>
      <span
        className="p-job-title"
      >
        Computer Artist, Advertisement Production
        , 
      </span>
      <span
        className="p-org"
      >
        Greater Media Newspapers
        , 
      </span>
      <span
        className="p-locality"
      >
        East Brunswick
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
    <li>
      <span
        className="dt-start"
      >
        01/1992
         - 
      </span>
      <span
        className="dt-end"
      >
        08/1996
         : 
      </span>
      <span
        className="p-job-title"
      >
        Cashier / Front End Supervisor
        , 
      </span>
      <span
        className="p-org"
      >
        Mayfair Foodtown Supermarkets
        , 
      </span>
      <span
        className="p-locality"
      >
        East Brunswick
        , 
      </span>
      <span
        className="p-region"
      >
        NJ
         
      </span>
    </li>
  </ul>,
]
`;
